# Client_Server_Application-TCP-IP

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  client.cpp  client.h
Network/: CMakeLists.txt
Network/include/client/: client.h
Network/include/server/: connection.h  server.h
Network/src/client/: client.cpp
Network/src/server/: connection.cpp  server.cpp
Server/: CMakeLists.txt  Connection.cpp  Connection.h  Server.h  server.cpp
